Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88260

flood warnings on Ubuntu 20.04 in CI

XMLWordPrintable

    • Linux/Wayland
    • 84dce213c77e744c1f0aab72f5ad3eab7b963908

      https://codereview.qt-project.org/c/qt/qt5/+/320798 Update submodules on 'dev' in qt/qt5

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1604715408

      https://testresults.qt.io/coin/logview/qt/qtwayland/fe23264d238894f7b47b910eee4bd893a16f7d91/LinuxUbuntu_20_04x86_64LinuxUbuntu_20_04x86_64GCCqtci-linux-Ubuntu-20.04-x86_64-50-cc16ecDocumentation_InsignificantTests_OutOfSourceBuild_UseLegacyInstructions/098280f415f0eeef15997229403617bcd281f3a4/test_1604715601

      ...
      agent:2020/11/07 02:32:22 build.go:379: QWARN  : tst_WaylandCompositor::createsIviSurfaces() [   300.390 W] default TestNamespace::QSignalSpy::initArgs - QSignalSpy: Unable to handle parameter 'surface' of type 'QWaylandSurface*' of method 'iviSurfaceRequested', use qRegisterMetaType to register it.
      agent:2020/11/07 02:32:22 build.go:379: QWARN  : tst_WaylandCompositor::createsIviSurfaces() [   300.390 W] default TestNamespace::QSignalSpy::initArgs - QSignalSpy: Unable to handle parameter 'surface' of type 'QWaylandSurface*' of method 'iviSurfaceRequested', use qRegisterMetaType to register it.
      agent:2020/11/07 02:32:22 build.go:379: QWARN  : tst_WaylandCompositor::createsIviSurfaces() [   300.390 W] default TestNamespace::QSignalSpy::initArgs - QSignalSpy: Unable to handle parameter 'surface' of type 'QWaylandSurface*' of method 'iviSurfaceRequested', use qRegisterMetaType to register it.
      agent:2020/11/07 02:32:22 build.go:379: QWARN  : tst_WaylandCompositor::createsIviSurfaces() [   300.390 W] default TestNamespace::QSignalSpy::initArgs - QSignalSpy: Unable to handle parameter 'surface' of type 'QWaylandSurface*' of method 'iviSurfaceRequested', use qRegisterMetaType to register it.
      agent:2020/11/07 02:32:22 build.go:379: QWARN  : tst_WaylandCompositor::createsIviSurfaces() [   300.390 W] default TestNamespace::QSignalSpy::initArgs - QSignalSpy: Unable to handle parameter 'surface' of type 'QWaylandSurface*' of method 'iviSurfaceRequested', use qRegisterMetaType to register it.
      agent:2020/11/07 02:32:22 build.go:379: QWARN  : tst_WaylandCompositor::createsIviSurfaces() [   300.390 W] default TestNamespace::QSignalSpy::initArgs - QSignalSpy: Unable to handle parameter 'surface' of type 'QWaylandSurface*' of method 'iviSurfaceRequested', use qRegisterMetaType to register it.
      ...
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: