src/testlib/qsignalspy.h
@@ -192,23 +192,21 @@ private:
     {
         args.reserve(member.parameterCount());
         for (int i = 0; i < member.parameterCount(); ++i) {
-            int tp = member.parameterType(i);
-            if (tp == QMetaType::UnknownType && obj) {
+            QMetaType tp = member.parameterMetaType(i);
+            if (!tp.isValid() && obj) {
                 void *argv[] = { &tp, &i };
                 QMetaObject::metacall(const_cast<QObject*>(obj),
                                       QMetaObject::RegisterMethodArgumentMetaType,
                                       member.methodIndex(), argv);
-                if (tp == -1)
-                    tp = QMetaType::UnknownType;
             }
-            if (tp == QMetaType::UnknownType) {
+            if (!tp.isValid()) {
                 qWarning("QSignalSpy: Unable to handle parameter '%s' of type '%s' of method '%s',"
                          " use qRegisterMetaType to register it.",
                          member.parameterNames().at(i).constData(),
                          member.parameterTypes().at(i).constData(),
                          member.name().constData());
             }
-            args << tp;
+            args << tp.id();
         }
     }
 
